# Unitree-temperature-monitor

./: .gitignore  PACKAGE.md  README.md  SUMMARY.md  config_g1.py  config_h1.py  dashboard_3d.py  dashboard_h1.py  pyproject.toml  requirements.txt  test_dashboard_3d.py  visual.py
assets/css/: css_fonts.css  main.css
assets/h1/: h1.urdf  h1_hand.urdf  h1_hand_stl copy.urdf
templates/: index_3d.html  index_g1.html  index_h1.html  visual.html
